--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ build_config.mk
 *_bench
 *_stress
 *.out
+*.class
+*.jar
+*.*jnilib*
 
 ldb
 manifest_dump
@@ -23,3 +26,5 @@ coverage/COVERAGE_REPORT
 .gdbhistory
 .phutil_module_cache
 tags
+java/*.log
+java/include/org_rocksdb_*.h
