[Java] Add SizeUnit in org.rocksdb.util to store const like KB, GB.
Summary:
* Add a class SizeUnit to store frequently used consts.  Currently
  it has KB, MB, GB, TB, and PB.

* Change the parameter type of Options.writeBufferSize and Options.blockSize
  from int to long.

Test Plan:
make rocksdbjava
make jtest

Reviewers: haobo, ankgup87, sdong, dhruba

Reviewed By: haobo

CC: leveldb

Differential Revision: https://reviews.facebook.net/D17703

--- a/java/Makefile
+++ b/java/Makefile
@@ -8,8 +8,8 @@ clean:
 	rm -f $(ROCKSDB_JAR)
 
 java:
-	javac org/rocksdb/*.java
-	jar -cf $(ROCKSDB_JAR) org/rocksdb/*.class
+	javac org/rocksdb/*.java org/rocksdb/util/*.java
+	jar -cf $(ROCKSDB_JAR) org/rocksdb/*.class org/rocksdb/util/*.class
 	javah -d $(NATIVE_INCLUDE) -jni $(NATIVE_JAVA_CLASSES)
 
 sample: java
