since we're not sharing folders with the vm, copy built .so files and jars back to host system.

--- a/java/crossbuild/Vagrantfile
+++ b/java/crossbuild/Vagrantfile
@@ -21,5 +21,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     v.cpus = 4
   end
 
+  config.vm.synced_folder "../", "/rocksdb-build"
   config.vm.synced_folder "../..", "/rocksdb", type: "rsync"
 end
