--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,5 +1,7 @@
 include ../build_config.mk
 
+.PHONY: main clean
+
 all: simple_example column_families_example
 
 simple_example: simple_example.cc
@@ -7,3 +9,6 @@ simple_example: simple_example.cc
 
 column_families_example: column_families_example.cc
 	$(CXX) $(CXXFLAGS) $@.cc -o$@ ../librocksdb.a -I../include -O2 -std=c++11 $(PLATFORM_LDFLAGS) $(PLATFORM_CXXFLAGS) $(EXEC_LDFLAGS)
+
+clean: simple_example column_families_example
+	rm -rf ./simple_example ./column_families_example
